--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "nafisazizir",
   "license": "ISC",
   "dependencies": {
+    "@vercel/postgres": "^0.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
